--- a/pom.xml
+++ b/pom.xml
@@ -26,6 +26,18 @@
         <version>3.3.0.0-SNAP2</version>
         <scope>test</scope>
     </dependency>
+    <dependency>
+        <groupId>junit</groupId>
+        <artifactId>junit</artifactId>
+        <version>4.12</version>
+        <scope>test</scope>
+    </dependency>
+    <dependency>
+        <groupId>pl.pragmatists</groupId>
+        <artifactId>JUnitParams</artifactId>
+        <version>1.1.1</version>
+        <scope>test</scope>
+    </dependency>
 
 
 </dependencies>
